static/css/navigation.css
body{
    background-color: bisque;
}
.home{
    height: max-content;
    padding: 10px 15px;
}
.home p {
    font-family: 'Times New Roman', Times, serif;
    font-size: 30px;
}

/* Add a black background color to the top navigation */
.topnav {
    background-color: #333;
    overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

/* Change the color of links on hover */
.topnav a:hover {
    background-color: #a0a0a0;
    color: black;
}

/* Add an active class to highlight the current page */
.topnav a.active {
    background-color: #032142;
    color: white;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon {
    display: none;
}
/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 970px) {
    .topnav a:not(:first-child) {display: none;}
    .topnav a.icon {
    float: right;
    display: block;
    }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 970px) {
    .topnav.responsive {position: relative;}
    .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
    }
    .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
    }
}

.form {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding-top: 20px;
}
.form input {
    width: max-content;
    /* min-width: 20rem; */
    height: 4rem;
    border-radius: 1rem;
    box-shadow: 0.3rem 0.3rem 0.6rem rgb(209, 209, 209), -0.2rem -0.2rem 0.5rem rgb(255, 255, 255);
    font-size: 20px;
    text-align: center;
    margin-bottom: 20px;
}
.form label {
    color: #032142;
}
.form input[type=radio] {
    min-width: 1rem;
    height: 1rem;
    font: inherit;
    color: currentColor;
    width: 1.15em;
    height: 1.15em;
    border: 0.15em solid currentColor;
    border-radius: 50%;
    transform: translateY(0.16em);
    -webkit-transform: translateY(0.25em);
}
.form button {
    width: 10rem;
    height: 4rem;
    border-radius: 1rem;
    box-shadow: 0.3rem 0.3rem 0.6rem rgb(209, 209, 209), -0.2rem -0.2rem 0.5rem rgb(255, 255, 255);
    font-size: 30px;
}

.jsonData_class {
    text-align: center;
}

.jsonData_class > div {
    display: inline-block;
    font-family: "arial";
    font-size: 20px;
}

#line1 {
    overflow: hidden;
    white-space: nowrap;
    border-right: transparent;
    width: 0;
    animation: typing 1s steps(30, end) forwards;
    -webkit-animation: typing 1s steps(30, end) forwards;
}

#line2container {
    display: grid;
    place-items: center;
    width: 370px;
    transform: translateY(-40px);
    -webkit-transform: translateY(-40px);
    -moz-transform: translateY(-40px);
    -ms-transform: translateY(-40px);
    -o-transform: translateY(-40px);
}

#line2 {
    overflow: hidden;
    white-space: nowrap;
    border-right: transparent;
    width: 0;
    animation: typing  1s steps(30, end) 1s forwards;
    -webkit-animation: typing  1s steps(30, end) 1s forwards;
}

@keyframes typing {
    from {width: 0;}
    to {width: 100%;}
}

